--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,16 @@
 {
   "vetur.validation.template": false,
   "vetur.validation.script": false,
-  "vetur.validation.style": false
+  "vetur.validation.style": false,
+  "cSpell.words": [
+    "Geoege",
+    "Immanuael",
+    "Kamau",
+    "Karanja",
+    "Kimani",
+    "Kimiti",
+    "Kipkoech",
+    "Mbugua",
+    "Wambui"
+  ]
 }
