--- a/app/package.json
+++ b/app/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.5.1",
     "json-server": "^0.17.3",
     "pinia": "^2.1.7",
+    "three": "^0.164.1",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
   },
